--- a/assets/scss/components/btn-switch.scss
+++ b/assets/scss/components/btn-switch.scss
@@ -34,7 +34,7 @@
   font-size: 14px;
   display: block;
   position: absolute;
-  top: 1px;
+  top: 2px;
 }
 
 .btn-switch .handle:after {
